# wasm-runtime-benchmark

./: .gitignore  Cargo.toml  README.md  fibonacci.stripped.wasm  fibonacci.wasm
.cargo/: config
benches/: my_benchmark.rs
src/: fibonacci.rs  lib.rs  lucet_runner.rs  wasmer_runner.rs
wasm-sample/: README.md  add-one.wasm  fibonacci.wasm  mruby-script.wasm  nbody.wasm
wasm-sample/add-one/: package-lock.json  package.json
wasm-sample/add-one/assembly/: index.ts
wasm-sample/fibonacci/: Cargo.toml
wasm-sample/fibonacci/src/: lib.rs
wasm-sample/nbody/: Cargo.toml
wasm-sample/nbody/src/: lib.rs
wasm-sample/rust-fibonacci/: Cargo.toml  README.md
wasm-sample/rust-fibonacci/src/: lib.rs
