[package]
name = "wasm-runtime-benchmark"
version = "0.1.0"
authors = ["Di Wen <ifyouseewendy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lucet-runtime = { path = "../lucet/lucet-runtime" }
lucet-wasi = { path = "../lucet/lucet-wasi" }

[dependencies.wasmer-runtime]
version = "0.15.0"
path = "/home/vagrant/wasmer/lib/runtime"
default-features = false
features = ["singlepass", "cranelift", "llvm", "default-backend-singlepass"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
