[package]
name = "wasm-runtime-benchmark"
version = "0.1.0"
authors = ["Di Wen <ifyouseewendy@gmail.com>"]
edition = "2018"

[dependencies]
lucet-runtime = { path = "../lucet/lucet-runtime" }
lucet-wasi = { path = "../lucet/lucet-wasi" }

[dependencies.wasmer-runtime]
git = "https://github.com/wasmerio/wasmer"
tag = "0.15.0"
default-features = false
features = ["singlepass", "cranelift", "llvm", "default-backend-singlepass"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
