[package]
name = "wasm-runtime-benchmark"
version = "0.1.0"
authors = ["Di Wen <ifyouseewendy@gmail.com>"]
edition = "2018"

[dependencies]
lucet-runtime = "0.6.1"
lucetc = "0.6.1"
multibase = "*"

[dependencies.wasmer-runtime]
git = "https://github.com/wasmerio/wasmer"
tag = "0.15.0"
default-features = false
features = ["singlepass", "cranelift", "llvm", "default-backend-singlepass"]

[dev-dependencies]
# https://bheisler.github.io/criterion.rs/book/user_guide/known_limitations.html
criterion = { version = "0.3", features = ["real_blackbox"] }

[[bench]]
name = "my_benchmark"
harness = false
